2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/server/launcher.py:
	* flumotion/utils/log.py:
	  remove enableLogging and disableLogging.  Use new method,
	  setFluDebug.  Make that reset levels on the fly as well.

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/utils/log.py:
	  fix up debugging system, FLU_DEBUG now works like in GStreamer,
	  but with categories registered as they are encountered.

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin.in:
	* bin/flumotion.in:
	  trigger FLU_DEBUG parsing with debug.init
	* data/glade/admin.glade:
	  change name
	* flumotion/gui/adminclient.py:
	* flumotion/server/component.py:
	* flumotion/server/controller.py:
	* flumotion/utils/__init__.py:
	  add flumotion.utils.log to blacklist
	* flumotion/utils/log.py:
	  

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin.in:
	* flumotion/config/installed.py.in:
	* flumotion/config/uninstalled.py.in:
	  fix locations properly
	* flumotion/gui/adminclient.py:
	  set default icon

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* bin/video-server-admin.in:
	* configure.ac:
	  rename video-server-admin to flumotion-admin

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* data/Makefile.am:
	* data/image/fluendo.png:
	* data/ui/Makefile.am:
	* data/ui/admin.glade:
	* data/ui/spyglass.glade:
	* data/ui/videotest.glade:
	* flumotion/admin/spyglass.py:
	* flumotion/admin/videotest.py:
	* flumotion/gui/adminclient.py:
	  create data/image and data/glade
	  use it everywhere
	  add and set app icon

2004-09-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/video-server-admin.in:
	* flumotion/components/http/http.py:
	* flumotion/gui/adminclient.py:
	* flumotion/server/admin.py:
	* flumotion/server/component.py:
	* flumotion/server/controller.py: